2003-05-05  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.5rc1.

2003-05-04  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py (ResultTypes): export legal values for
	Reporter.reportResults() so remote reporters know what to expect

2003-05-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/tcp.py, twisted/internet/ssl.py: TLS support
	added to TCP connections; startTLS() method added to transport
	objects to switch from unencrypted to encrypted mode.

2003-05-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/protocol.py: Added continueTrying attribute to
	ReconnectingClientFactory, and increased the number of states where
	stopTrying() will actually stop further connection attempts.

2003-05-01  Brian Warner  <warner@lothar.com>

	* twisted/test/test_trial.py: handle new trial layout
	* twisted/trial/runner.py (runTest): utility function to help
	test_trial
	* twisted/trial/util.py (extract_tb): handle new trial layout,
	ignore the right framework functions.

2003-05-01  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/python/context.py: call-stack context tree.

	* twisted/python/components.py: support interface-to-interface
	adapatation, IFoo(o) syntax for adaptation, context-based
	registries and more.

	* twisted/python/log.py: Totally rewritten logging system.

2003-05-01  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py (Gtk2Reactor._doReadOrWrite):
	add Anthony's cached-Failure speedup to gtk2 too.

2003-05-01  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/tcp.py, twisted/internet/default.py: cache
	Failures whose contents are always identical. Speeds up lost
	connections considerably.

	* twisted/python/failure.py: If you pass only an exception object
	to Failure(), a stack will not be constructed. Speeds up Failure
	creation in certain common cases where traceback printing isn't
	required.
