@@ -1,3 +1,10 @@
+2003-05-05  Brian Warner  <warner@lothar.com>
+
+	* twisted/trial/unittest.py: move log.startKeepingErrors() from
+	top-level to TestSuite.run(). This fixes the problem of errors
+	being eaten by code which imports unittest for other reasons (like
+	to use trial.remote reporting)
+
 2003-05-05  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.0.5rc1.
